Add descriptions for most of the new notebooks. Separate notebooks should be made to discuss the details of functions in utils.mlbench, but need to focus on results for paper draft and presentations. Add change to triton to passthrough a server address for stress-testing.

--- a/notebooks/generate_pseudodata.ipynb
+++ b/notebooks/generate_pseudodata.ipynb
@@ -15,6 +15,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f679c40-43a7-46de-83b0-ee34ed92cfc4",
+   "metadata": {},
+   "source": [
+    "# Generating HEP-like pseudo-data\n",
+    "The function here will generate a ragged-array with several fields, representing HEP-like data for one of the ML benchmark models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d534f0c6-c995-41f2-8518-28949357f2a6",
@@ -31,6 +40,15 @@
     "    return ak.Array({\"points\": points,\n",
     "            \"features\": features,\n",
     "            \"mask\": mask})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e80d40a-5992-44da-b5bc-1b84781bc75f",
+   "metadata": {},
+   "source": [
+    "## Writing Data to files\n",
+    "HEP commonly uses the ROOT file format. ```uproot``` is a package for I/O between different file formats like ```root```, and in-memory data in the format of ```numpy``` arrays, ragged arrays (via ```awkward```), ```pandas```, etc."
    ]
   },
   {
@@ -64,6 +82,16 @@
     "    file.close()\n",
     "    file_names.append(file_name)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55c395bc-a7c1-4ff2-a5fe-d8a8d59af62d",
+   "metadata": {},
+   "source": [
+    "## Reading back data\n",
+    "\n",
+    "Data can be opened again using ```uproot.open```"
    ]
   },
   {
