--- a/notebooks/run_benchmark_MU_SM.ipynb
+++ b/notebooks/run_benchmark_MU_SM.ipynb
@@ -20,7 +20,17 @@
     "import time\n",
     "import pathlib\n",
     "#Can use ship_env and the .triton_env with LPCCondorCluster, but here's an alternative that should work for other cluster types\n",
-    "from distributed.diagnostics.plugin import UploadDirectory"
+    "from distributed.diagnostics.plugin import UploadDirectory\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b2c32d6-158c-4ab7-8764-d3331d8b9298",
+   "metadata": {},
+   "source": [
+    "## Creating a dask cluster\n",
+    "A dask cluster can be created, which allows the scale-out of work distributed across multiple networked servers. These servers typically have only CPU resources (no GPU/FPGA co-processors)"
    ]
   },
   {
@@ -40,6 +50,14 @@
     "                           #death_timeout=240,\n",
     "                           #schedule_options={\"dashboard_address\": f\":{__get_port():d}\"},\n",
     "                          )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d2bc24-376f-4377-badf-f1f00082c283",
+   "metadata": {},
+   "source": [
+    "The ```adapt``` function can change the requested workers"
    ]
   },
   {
@@ -67,6 +85,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02067e3e-2567-4c71-b76a-fadebc724f47",
+   "metadata": {},
+   "source": [
+    "## The client\n",
+    "The listed IP address is incorrect for monitoring if we use a tunnel and port-forwarding. Instead, point your browser to \n",
+    "https://localhost:8787/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f79a33d6-70a6-4587-b2bb-c7abd0e30007",
@@ -77,6 +105,19 @@
    "source": [
     "client = Client(cluster)\n",
     "client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55cfd377-8e5f-457f-b615-2c7f35e0671c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Uploading directories to access python packages and data\n",
+    "The remote workers are not guaranteed to have access to the python packages from this repo. There are multiple mechanisms to rectify this.\n",
+    "A general solution for a directory of files is to use the worker plugin ```UploadDirectory```, making sure to update_path and ```restart``` the\n",
+    "workers."
    ]
   },
   {
@@ -104,6 +145,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec22d583-9a47-41a7-a75b-0430d52c7a11",
+   "metadata": {},
+   "source": [
+    "## Testing client workers\n",
+    "To test that all the workers created have access to the packages needed to run the benchmark, we map a function (```test_workers```) to the workers that\n",
+    "use try-except clauses to test a few key features, and log the information in the return dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c37269d9-6e89-4e09-9558-190bba792464",
@@ -119,24 +170,12 @@
     "    test = pathlib.Path(\"/srv/utils/\")\n",
     "    success = False\n",
     "    try:\n",
-    "        from srv.utils.mlbench import SimpleWorkLog\n",
+    "        from utils.mlbench import SimpleWorkLog\n",
     "        success = True\n",
     "    except:\n",
     "        pass\n",
-    "    success2 = False\n",
-    "    try:\n",
-    "        from utils.mlbench import SimpleWorkLog\n",
-    "        success2 = True\n",
-    "    except:\n",
-    "        pass\n",
-    "    success3 = False\n",
-    "    try:\n",
-    "        from mlbench import SimpleWorkLog\n",
-    "        success3 = True\n",
-    "    except:\n",
-    "        pass\n",
     "    \n",
-    "    return os.environ, sys.path, success, success2, success3, list(test.iterdir())\n",
+    "    return os.environ, sys.path, success, list(test.iterdir())\n",
     "\n",
     "def test_triton_dask(worker):\n",
     "    x = get_triton_client()\n",
@@ -198,6 +237,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9c0b6186-f82f-43a7-9b97-1ec8b500583f",
+   "metadata": {},
+   "source": [
+    "Here is the test of the workers, using the ```gather``` and ```map``` functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6fe14ea2-8bf9-4e9e-a561-6415dafb0864",
@@ -208,6 +255,14 @@
    "source": [
     "#Test the workers can perform basic functions\n",
     "test = client.gather(client.map(test_workers, range(len(cluster.workers))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b3b40a-3138-4271-b13a-bf077720bfd7",
+   "metadata": {},
+   "source": [
+    "We need to know how many unique workers are accessible and ready to distribute work to. If all the numbers match, we have ```n_workers``` ready and able to proceed"
    ]
   },
   {
@@ -227,6 +282,19 @@
     "n_triton_functioning = sum([r['triton'] for r in unique_workers.values()])\n",
     "n_local_functioning = sum([r['local'] for r in unique_workers.values()])\n",
     "n_workers, n_utils_imports, n_triton_functioning, n_local_functioning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b636686-f3d6-4ba7-89e8-b36bfbd7c8d6",
+   "metadata": {},
+   "source": [
+    "## Creating work parcels\n",
+    "Here we create work parcels to map to the ```process_function``` defined in ```utils.mlbench```\n",
+    "\n",
+    "For triton inference, we have ```workargstriton``` and ```workargstritonlong```, the latter of which is designed to run 10 times as long. ```workargslocal``` is for local CPU inference, and will perform a factor of ~50x slower than the triton inference.\n",
+    "Each sublist is (in this order) the seed for random number generation, the number of pseudo-events to create, the batchsize for inference (limited memory requiring smaller batches on CPU-only workers), and finally whether the inference should proceed via Triton or not.\n",
+    "When the ```client.map``` function is called, the first parcel will take the first argument from each of these 4 sublists, and the last from the last argument of each sublist. ```client.submit``` can also be used to distribute the work parcels"
    ]
   },
   {
@@ -250,6 +318,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41dab08f-7eb8-4dde-b3f6-904d4cd8d8c1",
+   "metadata": {},
+   "source": [
+    "## Test\n",
+    "Here we test the ```run_inference_pnmodel``` function, which is one of the core steps of ```process_function```.\n",
+    "This will take an input of (pseudo)data, a local ParticleNet model or triton client configured for the same model, as well as a worklog function which will collect some dask client metrics like time spent in the various functions, the hostname, the number of bytes sent over the network for inferences, and so on"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9bae7f94-a3d8-4588-87e6-eb77dd1a662e",
@@ -268,6 +346,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9cad5a0c-bc90-4453-a836-230c5e53676a",
+   "metadata": {},
+   "source": [
+    "## Test Triton workers\n",
+    "For 100 work parcels of 1000 pseudoevents, this can run in a few minutes"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "97852189-d1e9-47c1-b954-2643c1a92ce7",
@@ -283,6 +370,36 @@
     "resulttriton = client.gather(futurestriton)\n",
     "print(\"runtime(s)\", time.perf_counter() - pft)\n",
     "print(\"time\", time.time())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "243fd6b9-f3f2-4330-a1a2-f5054dca5fd8",
+   "metadata": {},
+   "source": [
+    "### Save the worklogs which are returned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c57f5fcc-99d3-48d0-abd1-4482d5547be6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"wm_triton_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "    pickle.dump(resulttriton, output_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf43b28-1406-40af-9885-36ac4c668634",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Stress Test Triton workers\n",
+    "This function should take 10 times as long, roughly, if the inference calls are the majority of the processing time"
    ]
   },
   {
@@ -306,6 +423,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39a1000c-f701-4333-b019-054e4a7abea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"wm_tritonlong_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "    pickle.dump(resulttlong, output_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b08701e-8259-474c-8578-761ea19e7aa7",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Test Local workers\n",
+    "This requests the analogue of the ```Test Triton workers``` cell, but uses each dask worker's local CPU to run inference. \n",
+    "This can take 50x longer to run, so the number of generated events and work parcels should be carefully balanced "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4ce99067-75c5-4bf2-8935-5621356fbdd8",
    "metadata": {
     "tags": []
@@ -319,6 +459,25 @@
     "resultlocal = client.gather(futureslocal)\n",
     "print(\"runtime(s)\", time.perf_counter() - pfl)\n",
     "print(\"time\", time.time())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a4d7ab0-610f-4462-a746-4dacdd9b0286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(f\"wm_local_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "    pickle.dump(resultlocal, output_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6c441d3-c7a8-490e-b2ed-0c707c4d2012",
+   "metadata": {},
+   "source": [
+    "## Close the cluster"
    ]
   },
   {
