--- a/notebooks/triton_prometheus_queries.ipynb
+++ b/notebooks/triton_prometheus_queries.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "239c5c44-f3e4-437d-a7cb-bfe5be8b634f",
+   "metadata": {},
+   "source": [
+    "## We connect to the Prometheus Metrics server which logs the data for the EAF's Triton Server"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4ab8010b-3b64-4c9c-9733-933144858a04",
@@ -32,6 +40,14 @@
    "outputs": [],
    "source": [
     "prom = PrometheusConnect(url=\"http://lsdataitb.fnal.gov:9009/prometheus\", disable_ssl=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68795db7-31d5-4b5e-8e78-d14ab9371b80",
+   "metadata": {},
+   "source": [
+    "This lists how many metrics are available, and in particular the ones for the GPU MIG instances"
    ]
   },
   {
@@ -46,6 +62,19 @@
     "xxx = prom.all_metrics()\n",
     "len(xxx)\n",
     "[xx for xx in xxx if \"GPU\" in xx or \"DCGM\" in xx]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94b94a07-2fe2-48fb-8ce2-7fc70f69f093",
+   "metadata": {},
+   "source": [
+    "## Main Query Function\n",
+    "This uses the PromQL language to get metrics recorded between the first and last timestamp. To prevent overloading the prometheus server,\n",
+    "the timestamps should be broken up into pairs that are on the order of hours to a day or two (so to get a week's worth of logs, do 7 1-day increments as a ```list[(t0, t1), (t1, t2), (t2, t3), (t3, t4), (t4, t5), (t5, t6)]```\n",
+    "These will be concatenated so that the returned results dictionary contains, for each query, a single pandas datafram for (t0, t6)\n",
+    "\n",
+    "An importan caveat about prometheus metrics are the disparate collection and timing aspects. Each metric tends to log one figure of merit, with many labels for association to a particular task or resource type. As an example, the number of inferences computed to this point may be logged (with associated timestamp), but the nearly-coincident inference request duration may happen slightly sooner, later, or not at all. This point is important, as missing metrics are not rare. Many of these are logged at the EAF with a frequency of 15s or 30s. The prometheus developers recommend aggregating metris in a time-window 4x larger than the collection frequency. As such, 60s or 120s should be chosen as the ```step``` value in the function to avoid noisy and missing data."
    ]
   },
   {
@@ -160,6 +189,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3369b7e2-d0a7-426a-9023-7f5dbb33d0e8",
+   "metadata": {},
+   "source": [
+    "In addition to the query dataframes, a list of the key:query pairs and the different model/versions active, and GPU MIG slices active, will be recorded"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "428998de-695a-4e4b-97d7-59ec468afbf9",
@@ -184,6 +221,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4875702-3e44-4a58-90d9-517ef2d5e773",
+   "metadata": {},
+   "source": [
+    "An example result, the average percent utilization of the 1st GPU tensor pipe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d7245fa8-2eed-4b0a-8ff4-972c9579c6b4",
@@ -193,6 +238,16 @@
    "outputs": [],
    "source": [
     "results[\"gpu_tensor_util_0\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a00bbd25-2e29-45d9-b043-56517d5d0c4d",
+   "metadata": {},
+   "source": [
+    "## Converting to a unified dataframe\n",
+    "This function takes the subset of results that can be concatenated into new columns,\n",
+    "including the inference rate (with breakdownds by model), the timing of the inference request (overall request time, as well as broken down into queue time, input time, compute time, and output time), and the GPU dram and tensor utilization. See NVidia docs for more information on how these quantities are calculated and stored"
    ]
   },
   {
@@ -281,20 +336,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a243ca52-500b-408c-91c3-ab5393c1b1b7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plt.plot(i0.index.values, i0.rate.values)\n",
-    "scale_value = max(i0.rate.values)/max(i0.summed_gpu_tensor_util)\n",
-    "plt.plot(i0.index.values, i0.summed_gpu_tensor_util.values*scale_value, color=\"tab:red\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "88e02198-b119-4df0-a73d-66e8770f5860",
    "metadata": {
     "tags": []
@@ -307,24 +348,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04b8f557-ff61-47c7-b643-4740e11d6779",
+   "metadata": {},
+   "source": [
+    "## A few simple plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b912b07-fbd3-431b-8d1c-330b63f73aef",
+   "id": "a243ca52-500b-408c-91c3-ab5393c1b1b7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#Concurrency question: if models tend to gravitate to their own instances, summed instances ~ num_instances\n",
-    "#If concurrency is as high as possible, summed instances ~ avg_num_models * num_instances\n",
-    "ii = i0[i0.num_instances > 0].summed_instances/i0[i0.num_instances > 0].num_instances\n",
-    "print(np.mean(ii), np.max(ii), np.min(ii))\n",
-    "print(np.sqrt(np.var(ii)))\n",
-    "\n",
-    "#Consistency check: summed rate should always add to net rate!\n",
-    "kk = i0[i0.num_instances > 0].summed_rate/i0[i0.num_instances > 0].rate\n",
-    "print(np.mean(kk), np.max(kk), np.min(kk))\n",
-    "print(np.sqrt(np.var(kk)))"
+    "plt.plot(i0.index.values, i0.rate.values)\n",
+    "scale_value = max(i0.rate.values)/max(i0.summed_gpu_tensor_util)\n",
+    "plt.plot(i0.index.values, i0.summed_gpu_tensor_util.values*scale_value, color=\"tab:red\")"
    ]
   },
   {
@@ -361,6 +403,38 @@
    "outputs": [],
    "source": [
     "plt.scatter(\"num_instances_svj_tch_gnn\", \"rate_svj_tch_gnn\", data=i0[i0.num_instances > 0], color=\"tab:green\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39053bf5-269d-4994-bf75-47aabc2b055b",
+   "metadata": {},
+   "source": [
+    "## Concurrency\n",
+    "How can we measure how many models are active per Triton server? The ```num_instances``` is how many actives servers there are.\n",
+    "The variables ```summed_instances``` is the sum of each model's active ```num_instances```. If the values are equal, then concurrency is low\n",
+    "(when defined as the number of ML models being run on an individual server). If ```summed_instances >> num_instances```, that indicates that each triton server is tending to actively serve requests from multiple models in a given timespan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b912b07-fbd3-431b-8d1c-330b63f73aef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Concurrency question: if models tend to gravitate to their own instances, summed instances ~ num_instances\n",
+    "#If concurrency is as high as possible, summed instances ~ avg_num_models * num_instances\n",
+    "ii = i0[i0.num_instances > 0].summed_instances/i0[i0.num_instances > 0].num_instances\n",
+    "print(np.mean(ii), np.max(ii), np.min(ii))\n",
+    "print(np.sqrt(np.var(ii)))\n",
+    "\n",
+    "#Consistency check: summed rate should always add to net rate!\n",
+    "kk = i0[i0.num_instances > 0].summed_rate/i0[i0.num_instances > 0].rate\n",
+    "print(np.mean(kk), np.max(kk), np.min(kk))\n",
+    "print(np.sqrt(np.var(kk)))"
    ]
   },
   {
