Fix bug in worklog, fix bug in get_queries, try to add comments everywhere.

--- a/notebooks/run_benchmark_MU_SM.ipynb
+++ b/notebooks/run_benchmark_MU_SM.ipynb
@@ -164,6 +164,7 @@
    "outputs": [],
    "source": [
     "def test_structure(x):\n",
+    "    \"\"\"Simple test that the uploaded directories are where we expect, and we can import from them\"\"\"\n",
     "    import os\n",
     "    import sys\n",
     "    import pathlib\n",
@@ -178,6 +179,7 @@
     "    return os.environ, sys.path, success, list(test.iterdir())\n",
     "\n",
     "def test_triton_dask(worker):\n",
+    "    \"\"\"Test function for instantiating a triton client on a remote dask worker\"\"\"\n",
     "    x = get_triton_client()\n",
     "    if x is not None:\n",
     "        return \"success\"\n",
@@ -185,6 +187,7 @@
     "        return type(x)\n",
     "\n",
     "def print_cluster_info(cluster):\n",
+    "    \"\"\"Function for printing some cluster information locally, with some very quick/manual pretty-print formatting\"\"\"\n",
     "    for key in cluster.scheduler_info.keys():\n",
     "        if key not in [\"workers\"]:\n",
     "            print(key, cluster.scheduler_info[key])\n",
@@ -199,6 +202,8 @@
     "                    extras += \"  =\\t\"    \n",
     "                    print(\"\\t\\t\", dkey, extras, dval)\n",
     "def test_workers(x):\n",
+    "    \"\"\"Fully test the core elements for this benchmark: Being able to identify the client machine (pid/hostname),\n",
+    "    import the worklog function, import and run the local and remote model functions\"\"\"\n",
     "    results = {}\n",
     "    try:\n",
     "        import os\n",
@@ -366,7 +371,7 @@
     "# Triton, N workers trial\n",
     "print(\"time\", time.time())\n",
     "pft = time.perf_counter()\n",
-    "futurestriton = client.map(process_function, *workargstriton)\n",
+    "futurestriton = client.map(process_function, *workargstriton, pure=False)\n",
     "resulttriton = client.gather(futurestriton)\n",
     "print(\"runtime(s)\", time.perf_counter() - pft)\n",
     "print(\"time\", time.time())"
@@ -414,7 +419,7 @@
     "# Triton, N workers trial long\n",
     "print(\"time\", time.time())\n",
     "pft = time.perf_counter()\n",
-    "futurestlong = client.map(process_function, *workargstritonlong)\n",
+    "futurestlong = client.map(process_function, *workargstritonlong, pure=False)\n",
     "resulttlong = client.gather(futurestlong)\n",
     "print(\"runtime(s)\", time.perf_counter() - pft)\n",
     "print(\"time\", time.time())"
@@ -455,7 +460,7 @@
     "# Local, N workers trial\n",
     "print(\"time\", time.time())\n",
     "pfl = time.perf_counter()\n",
-    "futureslocal = client.map(process_function, *workargslocal)\n",
+    "futureslocal = client.map(process_function, *workargslocal, pure=False)\n",
     "resultlocal = client.gather(futureslocal)\n",
     "print(\"runtime(s)\", time.perf_counter() - pfl)\n",
     "print(\"time\", time.time())"
