--- a/notebooks/triton_prometheus_queries.ipynb
+++ b/notebooks/triton_prometheus_queries.ipynb
@@ -86,13 +86,22 @@
    },
    "outputs": [],
    "source": [
+    "# A function for getting queries of many GPU and Triton server metrics. Inputs are a list of timestamp tuples,\n",
+    "# which can be parsed by the prometheus_api_client.utils.parse_datetime function. This can understand timestamps formatted like\n",
+    "# \"2023-03-30 at 16:00:00 MDT\"\n",
+    "# The step is the 'time-window' over which each query will be divided. This should be ~4x as long as the longest frequency for metric-gather\n",
     "def get_all_queries(timestamp_tuples, step):\n",
+    "    # A dictionary for our results\n",
     "    results = {}\n",
+    "    # Tuples of the queries we'll make, for debugging and info\n",
     "    queries = []\n",
-    "    timestamp_tuples = [(\"2023-03-30 at 16:00:00 MDT\", \"2023-03-30 at 19:00:00 MDT\"),\n",
-    "                       ]\n",
+    "    \n",
+    "    # Some queries are best created after understanding which unique models+version have been run in the triton servers\n",
+    "    # and which GPU instances have been active. These are then used to formulate model/version-specific and GPU-specific stats\n",
     "    unique_model_versions = None\n",
     "    unique_gpu_instances = None\n",
+    "    \n",
+    "    #Basic queries. Some of them are used as proxies to figure out the unqique queries to make later, like the \"gpu_tensor_util\" below\n",
     "    for key, query in {\n",
     "        \"num_instances\": \"count((sum by(pod) (delta(nv_inference_request_success[\"+step+\"]))) > 0)\",\n",
     "        \"inf_rate_net\":\"sum (rate(nv_inference_count[\"+step+\"]))\",\n",
@@ -116,8 +125,11 @@
     "        \"gpu_dram_util\": \"sum by(device,GPU_I_ID,instance) (avg_over_time (DCGM_FI_PROF_DRAM_ACTIVE{exported_container='triton',exported_namespace='triton',prometheus_replica='prometheus-k8s-0'}[\"+step+\"]))\",\n",
     "        #\"inf_cache_hits\": \"avg by(model, version, pod) (delta(nv_cache_num_hits_per_model[\"+step+\"])/(1+1000000*delta(nv_inference_request_success[\"+step+\"])))\",\n",
     "        }.items():\n",
+    "        # Build an empty list for these results; after iterating through all the timestamp pairs, they'll be concatenated together\n",
     "        results[key] = []\n",
+    "        # Log the queries, as they're easier to parse after being resolved fully\n",
     "        queries.append((key, query))\n",
+    "        # This function executes a query for each timestamp pair, for each key:query\n",
     "        for st, et in timestamp_tuples:\n",
     "            test_inp = prom.custom_query_range(\n",
     "                query=query,\n",
@@ -125,13 +137,22 @@
     "                end_time=parse_datetime(et),\n",
     "                step=step\n",
     "            )\n",
+    "            # Queries are converted to a pandas dataframe\n",
     "            df = MetricRangeDataFrame(test_inp)\n",
     "            results[key].append(df)\n",
+    "        # Dataframes are concatenated together along the time (index value) axis\n",
     "        results[key] = pd.concat(results[key], axis=0)\n",
+    "        \n",
+    "        # If we've performed a query that stores model/version info and GPU instance info, respectively, we can \n",
+    "        # Create a set of unique ones for the next two sets of queries\n",
     "        if unique_model_versions is None and hasattr(results[key], \"model\") and hasattr(results[key], \"version\"):\n",
     "            unique_model_versions = set((results[key].model+\"/\"+results[key].version).values)\n",
+    "        # At the EAF, the device ('nvidiaX' where X is 0...4 for example), GPU instance ID (enumeration)\n",
+    "        # and the instance (IP address of host machine) are sufficient to make a unique identifier\n",
     "        if unique_gpu_instances is None and hasattr(results[key], \"GPU_I_ID\"):\n",
     "            unique_gpu_instances = set((results[key].device+\"/\"+results[key].GPU_I_ID+\"/\"+results[key].instance).values)\n",
+    "    # Here we build the model-specific queries, getting both the number of unique number of Triton instances that served \n",
+    "    # inference requests for this model, ad well as the inference rate of that model across all Triton instances active per time step\n",
     "    model_queries = {\"num_instances_\"+model_version: \"count((sum by(pod) (delta(nv_inference_request_success{model='\"+\n",
     "                     model_version.split(\"/\")[0]+\"',version='\"+model_version.split(\"/\")[1]+\"'}[\"+step+\"]))) > 0)\"\n",
     "                     for model_version in unique_model_versions}\n",
@@ -149,17 +170,33 @@
     "                end_time=parse_datetime(et),\n",
     "                step=step\n",
     "            )\n",
+    "            # The query could be empty, as a model only served in a portion of the total timerange could be inactive in some timestamp-pairs.\n",
+    "            # We will deal with broadcasting these dataframes with missing values later\n",
     "            if len(test_inp) > 0:\n",
     "                df = MetricRangeDataFrame(test_inp)\n",
     "                results[key].append(df)\n",
     "        if len(results[key]) > 0:\n",
     "            results[key] = pd.concat(results[key], axis=0)\n",
     "        else:\n",
+    "            # If somehow we got no results for this model query, remove it from the dictionary and avoid iterating over it later\n",
     "            results.pop(key)\n",
     "            unique_model_versions.remove(key.split(\"_instances_\")[1])\n",
+    "            \n",
+    "    # Now we gather the GPU metrics. The two most interesting ones for us are the DCGM_FI_PROF_PIPE_TENSOR_ACTIVE and \n",
+    "    # DCGM_FI_PROF_DRAM_ACTIVE. The former measures how much of the compute resources (the Tensor Cores) are active, on average, in a time period\n",
+    "    # If the utilization is 50%, this could mean that the tensor cores for this GPU (slice) are 100% active for 50% of the time, 50% active for\n",
+    "    # 100% of the time, or any combination of activity_percent * time_active_percent that gives that product.\n",
     "    gpu_queries = {\"gpu_tensor_util_\"+str(mg): \"sum (avg_over_time(DCGM_FI_PROF_PIPE_TENSOR_ACTIVE{\"+\n",
     "                   \"exported_container='triton',exported_namespace='triton',prometheus_replica='prometheus-k8s-0',\"+\n",
     "                   \"device='\"+gpu_inst.split(\"/\")[0]+\"',GPU_I_ID='\"+gpu_inst.split(\"/\")[1]+\"',instance='\"+gpu_inst.split(\"/\")[2]+\"'}[\"+step+\"]))\" for mg, gpu_inst in enumerate(unique_gpu_instances)}\n",
+    "    # An example of how additional labels can filter out non-matching queries, if we do \n",
+    "    # DCGM_FI_PROF_DRAM_ACTIVE{exported_container='triton',exported_namespace='triton',prometheus_replica='prometheus-k8s-0',\n",
+    "    #                          device='nvidia2',GPU_I_ID='3',instance='110.4.29.45'}[120s]\n",
+    "    # We'll only get metrics from that specific device, if it has a running instance with that IP, and a running GPU instance matching it\n",
+    "    # In this case, for each timestep, it'll get a 'vector' of instantaenous measurements within 120s\n",
+    "    # The avg_over_time function then measures the average over time of that 'vector' and produces a scalar result\n",
+    "    # The scalar result may not be unique for a given timestamp, there can be other labels attached, and a final avg is taken over all\n",
+    "    # of those\n",
     "    gpu_queries.update(\n",
     "        {\"gpu_dram_util_\"+str(mg): \"avg (avg_over_time(DCGM_FI_PROF_DRAM_ACTIVE{\"+\n",
     "         \"exported_container='triton',exported_namespace='triton',prometheus_replica='prometheus-k8s-0',\"+\n",
@@ -205,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "results, queries, unique_model_versions, unique_gpu_instances = get_all_queries([(\"2023-03-30 at 16:00:00 MDT\", \"2023-03-30 at 19:00:00 MDT\"),], step=\"60s\")\n"
+    "results, queries, unique_model_versions, unique_gpu_instances = get_all_queries([(\"2023-03-30 at 16:00:00 MDT\", \"2023-03-30 at 19:00:00 MDT\"),], step=\"60s\")"
    ]
   },
   {
@@ -260,10 +297,15 @@
    "outputs": [],
    "source": [
     "def convert_results_to_df(results):\n",
+    "    # This iteratively walks through some of the dataframes that are compatible and aggregates results into a \n",
+    "    # unified dataframe. In each dataframe, the join call, in combination with how='left', means that results are broadcast\n",
+    "    # and filled with NaN wherever results may be missing from the second of the two dataframes.\n",
+    "    # For this reason, the 'inf_rate_net' which should have a valid value for all timestamps is used as the base.\n",
     "    i0 = results[\"inf_rate_net\"].join(results[\"num_instances\"],\n",
     "                                      how=\"left\", \n",
     "                                      rsuffix=\"_num_instances\",\n",
     "                                     )\n",
+    "    # We use the rsuffix and lsuffix to convert column names from 'value' to one that is understandable/parseable later on. \n",
     "    i0 = i0.join(results[\"inf_reqs_net\"],\n",
     "                 how=\"left\",\n",
     "                 rsuffix=\"_inf_reqs_net\")\n",
@@ -283,7 +325,7 @@
     "                 how=\"left\",\n",
     "                 rsuffix=\"_inf_out_dur_net\")\n",
     "    \n",
-    "    #Add the model metrics\n",
+    "    #Add the model metrics, using some suffix parsing to make it into num_instances_X or rate_X where X is the model name\n",
     "    for model in unique_model_versions:\n",
     "        itemp = results[\"inf_rate_\" + model].join(results[\"num_instances_\" + model],\n",
     "                                                  how=\"left\",\n",
@@ -292,7 +334,7 @@
     "                                                 )\n",
     "        i0 = i0.join(itemp, how=\"left\")\n",
     "        \n",
-    "    #Add the GPU Instance metrics\n",
+    "    #Add the GPU Instance metrics, including GPU instance enumeration\n",
     "    for mg, gpu in enumerate(unique_gpu_instances):\n",
     "        results[\"gpu_tensor_util_\" + str(mg)].fillna(0, inplace=True)\n",
     "        results[\"gpu_dram_util_\" + str(mg)].fillna(0, inplace=True)\n",
@@ -303,17 +345,23 @@
     "                                                 )\n",
     "        i0 = i0.join(itemp, how=\"left\")\n",
     "\n",
-    "    #Get rid of the \"value\" in names, and fill NaN values with 0 everywhere\n",
+    "    #Get rid of the \"value\" in column names, and fill NaN values with 0 everywhere\n",
     "    i0.rename(columns={\"value\": \"rate\"}, inplace=True)\n",
     "    i0.rename(columns={col:col[6:] for col in i0.columns if col.startswith(\"value_\")}, inplace=True)\n",
     "    i0.fillna(0, inplace=True)\n",
     "    \n",
-    "    #Aggregate some stats for models\n",
+    "    # Aggregate some stats for models\n",
+    "    # The summed rate and total inference rate should match, otherwise we've double-counted something\n",
+    "    # The summed instances may NOT match: if a model is active on 5 of 10 servers in a timestep, and another is active on 7 of 10\n",
+    "    # Then there will be '12' active instances in that timestep, net. This number divided by the net_instances\n",
+    "    # Therefore gives a measure of the 'average' model concurrency in a timestep. 10 net_instances and 70 summed_intstances\n",
+    "    # would indicate each instances was serving 7 models at some point in that timestep (but this is a lossy gathering of information,\n",
+    "    # 6 models could do one inference request while the last model is responsible for all of the remainder of thousands of requests.\n",
     "    valid_model_keys = [col for col in i0.columns if col.startswith(\"rate_\") and col.replace(\"rate_\", \"num_instances_\") in i0.columns]\n",
     "    i0[\"summed_rate\"] = sum([i0[col] for col in valid_model_keys])\n",
     "    i0[\"summed_instances\"] = sum([i0[col.replace(\"rate_\", \"num_instances_\")] for col in valid_model_keys])\n",
     "    \n",
-    "    #Aggregate some stats for GPU instances\n",
+    "    # Aggregate some stats for GPU instances\n",
     "    valid_gpu_keys = [col for col in i0.columns if col.startswith(\"gpu_tensor_util\") and col.replace(\"tensor\", \"dram\") in i0.columns]\n",
     "    i0[\"summed_gpu_tensor_util\"] = sum([i0[col] for col in valid_gpu_keys])\n",
     "    i0[\"summed_gpu_dram_util\"] = sum([i0[col.replace(\"tensor\", \"dram\")] for col in valid_model_keys])\n",
@@ -342,6 +390,7 @@
    },
    "outputs": [],
    "source": [
+    "# Save results in a pickle file for later\n",
     "import pickle\n",
     "with open(f\"triton_metrics_test.pickle\", \"wb\") as output_file:\n",
     "    pickle.dump(i0, output_file)"
@@ -378,6 +427,7 @@
    },
    "outputs": [],
    "source": [
+    "# Plot the rate versus number of instances, where at least 1 active instance is serving results\n",
     "plt.scatter(\"num_instances\", \"rate\", data=i0[i0.num_instances > 0], color=\"tab:red\")"
    ]
   },
@@ -390,6 +440,7 @@
    },
    "outputs": [],
    "source": [
+    "# Plot the same thing, but specific to the pn_demo model\n",
     "plt.scatter(\"num_instances_pn_demo\", \"rate_pn_demo\", data=i0[i0.num_instances > 0], color=\"tab:blue\")"
    ]
   },
