Target log bug, switch from adapt to scale, change names for logs to identify results better, use pure=False in client.map so that dask doesn't use cached results.

--- a/notebooks/run_benchmark_MU_SM.ipynb
+++ b/notebooks/run_benchmark_MU_SM.ipynb
@@ -45,7 +45,7 @@
     "cluster = LPCCondorCluster(cores=2, \n",
     "                           memory=\"7.5GB\", \n",
     "                           disk=\"4GB\", \n",
-    "                           log_directory='/uscmst1b_scratch/lpc1/3DayLifetime/'+str(os.getlogin),\n",
+    "                           log_directory='/uscmst1b_scratch/lpc1/3DayLifetime/'+str(os.getlogin()),\n",
     "                           #ship_env=False,\n",
     "                           #death_timeout=240,\n",
     "                           #schedule_options={\"dashboard_address\": f\":{__get_port():d}\"},\n",
@@ -54,10 +54,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "23b04696-438e-4c58-8adf-e3d56b1ab0a5",
+   "metadata": {},
+   "source": [
+    "Target number of workers to scale out to"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9696ce72-5da1-40c0-822f-5f7ab9b34829",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "target_workers = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c7d2bc24-376f-4377-badf-f1f00082c283",
    "metadata": {},
    "source": [
-    "The ```adapt``` function can change the requested workers"
+    "The ```scale``` function can change the requested workers"
    ]
   },
   {
@@ -69,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "cluster.adapt(minimum=50, maximum=50)"
+    "cluster.scale(n=target_workers)"
    ]
   },
   {
@@ -259,7 +279,7 @@
    "outputs": [],
    "source": [
     "#Test the workers can perform basic functions\n",
-    "test = client.gather(client.map(test_workers, range(len(cluster.workers))))"
+    "test = client.gather(client.map(test_workers, range(target_workers), pure=False))"
    ]
   },
   {
@@ -311,7 +331,7 @@
    },
    "outputs": [],
    "source": [
-    "n_workers = 100\n",
+    "n_workers = target_workers #copy or override independently of target_workers\n",
     "long_multiplier = 10\n",
     "#seeds, #pseudo-events, batchsize, use triton (True/False)\n",
     "workargstriton = [range(n_workers), [1000]*n_workers, [1000]*n_workers, [True]*n_workers]\n",
@@ -392,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"wm_triton_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "with open(f\"ScalingClient_triton_{len(workargstriton[1])}parcels_benchmark00.pickle\", \"wb\") as output_file:\n",
     "    pickle.dump(resulttriton, output_file)"
    ]
   },
@@ -432,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"wm_tritonlong_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "with open(f\"ScalingClient_tritonlong_{len(workargstritonlong[1])}parcels_benchmark00.pickle\", \"wb\") as output_file:\n",
     "    pickle.dump(resulttlong, output_file)"
    ]
   },
@@ -473,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f\"wm_local_benchmark00.pickle\", \"wb\") as output_file:\n",
+    "with open(f\"NoClient_local_{len(workarglocal[1])}parcels_benchmark00.pickle\", \"wb\") as output_file:\n",
     "    pickle.dump(resultlocal, output_file)"
    ]
   },
